unpackaged/objects/Product_Profiling__c.object
<CustomObject>
  <fields>
    <fullName>Account__c</fullName>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Products Profiling</relationshipLabel>
    <relationshipName>Products_Profiling</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
  </fields>
  <fields>
    <fullName>Competitor_Product__c</fullName>
    <formula>Product_Name__r.Competitor_Product__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Competitor Product</label>
    <type>Checkbox</type>
  </fields>
  <fields>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Products Profiling</relationshipLabel>
    <relationshipName>Products_Profiling</relationshipName>
    <type>Lookup</type>
  </fields>
  <fields>
    <fullName>Created_by_My_Direct_Reports__c</fullName>
    <formula>IF(CreatedBy.ManagerId = $User.Id, True, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Created by My Direct Reports</label>
    <type>Checkbox</type>
  </fields>
  <fields>
    <fullName>Created_by_me__c</fullName>
    <description>Create as per this request
https://dentsplysirona.my.salesforce.com/5000J00001FHkTJ
Dynamic Checkbox that shows if the logged in user created the products profiling.</description>
    <formula>IF(CreatedById == $User.Id, TRUE, FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Created by me</label>
    <type>Checkbox</type>
  </fields>
  <fields>
    <fullName>Date_of_purchase__c</fullName>
    <description>Requested in case 00144434.</description>
    <label>Date</label>
    <type>Date</type>
  </fields>
  <fields>
    <fullName>Intention_to_buy_date__c</fullName>
    <label>Intention to buy date</label>
    <type>Date</type>
  </fields>
  <fields>
    <fullName>Manufacturer__c</fullName>
    <formula>Product_Name__r.Manufacturer__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Manufacturer</label>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>Non_Erp_Product_ID__c</fullName>
    <formula>Product_Name__r.Id</formula>
    <label>Non Erp Product ID</label>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>Notes__c</fullName>
    <description>Add notes about any specifics about this product usage.</description>
    <inlineHelpText>Add any specific notes about this product.</inlineHelpText>
    <label>Notes</label>
    <type>TextArea</type>
  </fields>
  <fields>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <lookupFilter>
      <active>true</active>
      <filterItems>
        <field>Opportunity.AccountId</field>
        <operation>equals</operation>
        <valueField>$Source.Account__c</valueField>
      </filterItems>
      <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Products Profiling</relationshipLabel>
    <relationshipName>Products_Profiling</relationshipName>
    <type>Lookup</type>
  </fields>
  <fields>
    <fullName>Product_Category__c</fullName>
    <formula>Product_Name__r.Product_Category__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Category</label>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>Product_Name__c</fullName>
    <label>Product Name</label>
    <referenceTo>Non_ERP_Products__c</referenceTo>
    <relationshipLabel>Products Profiling</relationshipLabel>
    <relationshipName>Products_Profiling</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
  </fields>
  <fields>
    <fullName>Product__c</fullName>
    <formula>HYPERLINK("/lightning/r/Product_Profiling__c/"&amp;  Id &amp; "/view",  Product_Name__r.Name, "_self")</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product</label>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>Quantity__c</fullName>
    <description>This has been requested in case 00144434.</description>
    <label>Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
  </fields>
  <fields>
    <fullName>Remote__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Requested by Japan as part of Lightning project to track Cerec and CT remote - requested on Account bu suggested solution here on product profiling instead.</description>
    <label>Remote Service</label>
    <type>Checkbox</type>
  </fields>
  <fields>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
      <restricted>true</restricted>
      <valueSetDefinition>
        <value>
          <fullName>Prospect</fullName>
        </value>
        <value>
          <fullName>Low Usage</fullName>
        </value>
        <value>
          <fullName>Medium Usage</fullName>
        </value>
        <value>
          <fullName>High Usage</fullName>
        </value>
        <value>
          <fullName>Installed</fullName>
        </value>
        <value>
          <fullName>Not Interested</fullName>
        </value>
        <value>
          <fullName>Lapsed Usage</fullName>
        </value>
      </valueSetDefinition>
    </valueSet>
  </fields>
  <fields>
    <fullName>T35_Name_UK__c</fullName>
    <formula>Product_Name__r.T35_Name_UK__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>T35 Name (UK)</label>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>Unique_Key_Product_Contact__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>Unique Key for avoiding duplicates</description>
    <label>Unique Key Product Contact</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
  </fields>
  <fields>
    <fullName>Value__c</fullName>
    <description>TFUS-000001248</description>
    <label>Value</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
  </fields>
  <label>Product Profiling</label>
  <nameField>
    <displayFormat>PP{000000000}</displayFormat>
    <label>Profiling Id</label>
    <type>AutoNumber</type>
  </nameField>
  <pluralLabel>Products Profiling</pluralLabel>
  <sharingModel>ControlledByParent</sharingModel>
</CustomObject>